            - A new declared-but-not-defined type that can be used as a
              placeholder to avoid compile errors.
        Class PermClass<n>:
            - Everything in this class is now constexpr.
        Class Polynomial<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class RingTraits:
            - Provides new compile-time constants zeroInitialised and
              zeroDivisors.
        Struct TriangulationTraits<dim>:
            - New traits type to help with generic code for working with
              triangulations of different dimensions.
        Class Vector<T>:
            - For the iterator-based constructor, the old recommendation that
              the iterator type be random access is now a hard requirement.
        Function isTriangulation():
            - New function that converts a packet type constant into a
              triangulation dimension.
        Function subscript(), superscript():
            - When passing one of Regina's integer types, there is now a
              precondition that the given value is not infinity.
        Function supportedDim():
            - New function to indicate which dimensions of triangulation are
              supported; this complements maxDim() and standardDim().
        Function valueOf():
            - The native C++ integer versions of valueOf() are now templated.
            - The unsigned integer versions now reject negative numbers
              instead of performing wrap-around arithmetic.
            - All numeric versions of valueOf() (native integers and double)
              have been tightened with respect to unexpected characters,
              including leading and trailing whitespace:
              + they always return false, as the documentation has always
                promised (in the past, they succeeded in the presence of
                leading whitespace);